--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -41,11 +41,10 @@ jobs:
       - uses: GrantBirki/git-diff-action@v2.7.0
         id: git-diff-action
         with:
-          base_branch: HEAD^1 # compare the PR merge commit against its first parent
-          json_diff_file_output: diff.json # write the JSON diff output to a file called 'diff.json'
-          raw_diff_file_output: diff.txt # write the raw diff output to a file called 'diff.txt' (just in case)
-          file_output_only: "true" # do not print any diff output to the console (safety first)
-          max_buffer_size: "1000000" # the default git diff buffer size, increase if you have issues
+          base_branch: "origin/${{github.base_ref}}" # compare the PR against the target branch
+          json_diff_file_output: diff.json
+          raw_diff_file_output: diff.txt
+          file_output_only: "true"
           # Align file filters with lint-staged. They are single quoted so Git interprets them instead of the shell
           search_path: "'*.js' '*.jsx' '*.ts' '*.tsx'"
           # Only care about file names and non-deleted files
