--- a/.github/workflows/pull-request-reporting.yml
+++ b/.github/workflows/pull-request-reporting.yml
@@ -17,11 +17,18 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
+      # Reviewdog needs the git checkout
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.workflow_run.head_sha }}
+          fetch-depth: 0
       # Download all
       - uses: actions/download-artifact@v4
         with:
           path: artifacts
           merge-multiple: true
+          run-id: ${{ github.event.workflow_run.id }}
+          github-token: ${{ github.token }}
       - uses: reviewdog/action-setup@v1
         with:
           reviewdog_version: v0.20.3
