--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    if: ${{ github.event.action == 'push' && github.repository == 'dekkerglen/CubeCobra' }}
+    if: ${{ (github.event.action == 'push' && github.repository == 'dekkerglen/CubeCobra') || github.event.action == 'pull_request' }}
 
     steps:
       - uses: actions/checkout@v4
