--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,7 +12,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    if: ${{ (github.event.action == 'push' && github.repository == 'dekkerglen/CubeCobra') || github.event.action == 'pull_request' }}
+    # Run on pushes to dekkerglen/CubeCobra master branch, or any pull request
+    if: ${{ (github.event.action == 'push' && github.repository == 'dekkerglen/CubeCobra') || true }}
 
     steps:
       - uses: actions/checkout@v4
