--- a/package.json
+++ b/package.json
@@ -197,6 +197,7 @@
     "@babel/preset-typescript": "^7.26.0",
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.8.0",
+    "@microsoft/eslint-formatter-sarif": "^3.1.0",
     "@react-mock/fetch": "^0.3.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
