--- a/package.json
+++ b/package.json
@@ -222,6 +222,8 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "eslint": "^9.11.1",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
