--- a/.github/workflows/pull-request-reporting.yml
+++ b/.github/workflows/pull-request-reporting.yml
@@ -8,10 +8,12 @@ on:
     workflows: [CI Tests]
     types:
       - completed
-# TODO: Minimal permissions
+#permissions:
+#  checks: write
+#  pull-requests: write
 
 env:
-  REVIEWDOG_BASE_OPTIONS: '-reporter=github-pr-review -filter-mode=nofilter -fail-on-error=false -level=error'
+  REVIEWDOG_BASE_OPTIONS: '-reporter=github-check -filter-mode=nofilter -fail-on-error=false -level=error'
 
 jobs:
   download:
@@ -45,17 +47,4 @@ jobs:
           CI_COMMIT: ${{ github.event.workflow_run.head_sha }} 
           CI_BRANCH: ${{ github.event.workflow_run.head_branch }}
         run: |
-          cat artifacts/eslint.out | reviewdog $REVIEWDOG_BASE_OPTIONS -f "eslint" -name "eslint"
-      - name: Run reviewdog for prettier
-        if: always()
-        env:
-          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CI_PULL_REQUEST: ${{ github.event.workflow_run.pull_requests[0].number }} 
-          CI_REPO_OWNER: ${{ github.event.workflow_run.repository.owner.login }} 
-          CI_REPO_NAME: ${{ github.event.workflow_run.head_repository.name }} 
-          CI_COMMIT: ${{ github.event.workflow_run.head_sha }} 
-          CI_BRANCH: ${{ github.event.workflow_run.head_branch }}
-        # Prettier does not have a readable format that reviewdog understands, so we have to give it line formatting code via -efm
-        run: |
-          cat artifacts/prettier.out | reviewdog $REVIEWDOG_BASE_OPTIONS -name "prettier" \
-          -efm='%E[%trror] %f: %m (%l:%c)' -efm='%C[error]%r' -efm='%Z[error]%r' -efm='%-G%r'
+          cat artifacts/eslint.sarif | reviewdog $REVIEWDOG_BASE_OPTIONS -f "sarif" -name "eslint"
