--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -81,6 +81,11 @@ jobs:
         with:
           name: eslint.sarif
           path: eslint.sarif
+      - uses: github/codeql-action/upload-sarif@v3
+        with:
+          # Path to SARIF file relative to the root of the repository
+          sarif_file: artifacts/eslint.sarif
+          category: eslint
             
       # - name: Run eslint on changed files
       #   # Always run both eslint and prettier
