--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -72,17 +72,17 @@ jobs:
           # Path to SARIF file relative to the root of the repository
           sarif_file: eslint.sarif
           category: eslint
-      - name: Run tests
-        if: success()
-        run: npm run test:ci
+      # - name: Run tests
+      #   if: success()
+      #   run: npm run test:ci
 
-      - name: Upload Jest Coverage Report
-        if: success()
-        continue-on-error: true
-        uses: actions/upload-artifact@v4
-        with:
-          name: jest-coverage
-          path: coverage
+      # - name: Upload Jest Coverage Report
+      #   if: success()
+      #   continue-on-error: true
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: jest-coverage
+      #     path: coverage
 
-      - name: Build
-        run: npm run ci-build
+      # - name: Build
+      #   run: npm run ci-build
