--- a/package.json
+++ b/package.json
@@ -195,6 +195,8 @@
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.8.0",
     "@react-mock/fetch": "^0.3.0",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/release-notes-generator": "^14.0.3",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.0",
@@ -232,6 +234,7 @@
     "nodemon": "^3.1.4",
     "postcss": "^8.4.47",
     "raw-loader": "^4.0.2",
+    "semantic-release": "^24.2.1",
     "style-loader": "^4.0.0",
     "supertest": "^7.0.0",
     "tailwindcss": "^3.4.13",
