build: keep semantic-release version from lock file

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -17,13 +17,12 @@ jobs:
           node-version: 20
           cache: npm
 
-      - name: Install Semantic Release
-        run: npm install semantic-release @semantic-release/git @semantic-release/npm -g
+      - run: npm ci
 
       - name: Run Semantic Release
         id: semantic_release
         run: |
-          semantic-release --ci
+          npx semantic-release --ci
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
