--- a/package.json
+++ b/package.json
@@ -195,7 +195,9 @@
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.8.0",
     "@react-mock/fetch": "^0.3.0",
+    "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "^10.0.1",
     "@semantic-release/release-notes-generator": "^14.0.3",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
