build: semantic-release will need write permission to push tags

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   release:
     if: github.repository == 'dekkerglen/CubeCobraCDK' && github.ref == 'refs/heads/master'
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.get_version.outputs.version }}
