--- a/package.json
+++ b/package.json
@@ -223,6 +223,7 @@
     "@typescript-eslint/parser": "^8.0.0",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.1.3",
+    "conventional-changelog-conventionalcommits": "^8.0.0",
     "css-loader": "^7.1.2",
     "eslint": "^9.11.1",
     "eslint-plugin-react": "^7.37.3",
