Add nodemailer and email-templates TS types.

--- a/package.json
+++ b/package.json
@@ -202,10 +202,12 @@
     "@types/big-json": "^3.2.5",
     "@types/clone": "^2.1.4",
     "@types/core-js": "^2.5.8",
+    "@types/email-templates": "^10.0.4",
     "@types/eslint__js": "^8.42.3",
     "@types/event-stream": "^4.0.5",
     "@types/jest": "^29.5.14",
     "@types/nearley": "^2.11.5",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.3.3",
     "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18.3.0",
