--- a/.env_EXAMPLE
+++ b/.env_EXAMPLE
@@ -12,6 +12,9 @@ DOWNTIME_ACTIVE="false"
 DYNAMO_PREFIX="LOCAL"
 EMAIL_CONFIG_PASSWORD=""
 EMAIL_CONFIG_USERNAME=""
+EMAIL_CONFIG_FROM=""
+EMAIL_CONFIG_SMTP_HOST=""
+EMAIL_CONFIG_SMTP_PORT=""
 ENV="development"
 NITROPAY_ENABLED="false"
 NODE_ENV="development"
