build: run cdk tests on code changes

--- a/.github/workflows/cdk_deploy.yml
+++ b/.github/workflows/cdk_deploy.yml
@@ -87,14 +87,13 @@ jobs:
     if: github.repository == 'dekkerglen/CubeCobraCDK'
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
+          cache-dependency-path: infra/package-lock.json
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
