--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cubecobra",
-  "version": "1.1.7",
+  "version": "1.1.10",
   "description": "",
   "private": true,
   "main": "app.js",
@@ -176,6 +176,7 @@
     "stream": "^0.0.3",
     "stream-chain": "^3.3.2",
     "stream-json": "^1.9.1",
+    "stripe": "^17.6.0",
     "tmp": "^0.2.3",
     "tsconfig-paths": "^4.2.0",
     "unified": "^11.0.5",
