Fix failing comment tests when mentions isn't set in the body. Update PR tests so that Jest tests always run.
This was uncaught in a PR because the tests didn't run due to ESLint
errors.

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,8 +25,7 @@ jobs:
             - node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-node-        
-        
+            ${{ runner.os }}-node-
 
       - uses: actions/setup-node@v3
         with:
@@ -60,7 +59,7 @@ jobs:
           reporter: github-pr-review
 
       - name: Run tests
-        if: success()
+        if: always()
         run: npm run test:ci
 
       - name: Upload Jest Coverage Report
