Add more purchase buttons

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cubecobra",
-  "version": "1.1.10",
+  "version": "1.1.13",
   "description": "",
   "private": true,
   "main": "app.js",
@@ -121,6 +121,9 @@
     "express-validator": "^7.1.0",
     "forever-monitor": "^1.7.2",
     "github-slugger": "^2.0.0",
+    "hnsw": "^1.0.3",
+    "hnsw-lite": "^1.0.0-beta.1",
+    "hnswlib-node": "^3.0.0",
     "html-to-text": "^9.0.5",
     "http": "0.0.1-security",
     "joi": "^17.13.3",
@@ -131,6 +134,7 @@
     "micromark-util-character": "^2.0.1",
     "micromark-util-chunked": "^2.0.0",
     "micromark-util-symbol": "^2.0.0",
+    "ml-distance": "^4.0.1",
     "module-alias": "^2.2.3",
     "mongoose": "^8.5.1",
     "mongoose-seed": "^0.6.0",
@@ -172,12 +176,14 @@
     "serialize-javascript": "^6.0.2",
     "sharp": "^0.33.5",
     "shuffle-seed": "^1.1.6",
+    "slugify": "^1.6.6",
     "stream": "^0.0.3",
     "stream-chain": "^3.3.2",
     "stream-json": "^1.9.1",
     "stripe": "^17.6.0",
     "tmp": "^0.2.3",
     "tsconfig-paths": "^4.2.0",
+    "umap-js": "^1.4.0",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
     "util": "^0.12.4",
