--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -44,7 +44,7 @@ jobs:
         uses: tj-actions/eslint-changed-files@v25
         with:
           config_path: 'eslint.config.mjs'
-          extra_args: '--max-warnings=0'
+          extra_args: '--max-warnings=0 --no-warn-ignored'
           reporter: github-pr-review
 
       - name: Run Prettier on changed files
