--- a/infra/package.json
+++ b/infra/package.json
@@ -12,7 +12,7 @@
     "cdk": "cdk",
     "test:ci": "npx jest --coverage --coverageReporters text"
   },
-  "type": "module",
+  "type": "commonjs",
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
