--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cubecobra",
-  "version": "1.1.34",
+  "version": "1.1.37",
   "description": "",
   "private": true,
   "main": "app.js",
@@ -29,7 +29,8 @@
     "update-cube-history": "NODE_OPTIONS=--max_old_space-size=18192 ts-node src/jobs/update_cube_history.ts",
     "update-metadata-dict": "NODE_OPTIONS=--max_old_space-size=18192 ts-node src/jobs/update_metadata_dict.ts",
     "update-cards": "NODE_OPTIONS=--max_old_space-size=18192 ts-node src/jobs/update_cards.ts",
-    "update-all": "npm run update-draft-history && npm run update-cube-history && npm run update-metadata-dict && npm run update-cards",
+    "update-combos": "NODE_OPTIONS=--max_old_space-size=18192 ts-node src/jobs/update_combos.ts",
+    "update-all": "npm run update-draft-history && npm run update-cube-history && npm run update-metadata-dict && npm run update-combos && npm run update-cards",
     "update-hashes": "node --max-old-space-size=8192 src/jobs/repair_hashes.js",
     "upload-exports": "aws s3 sync temp/export s3://cubecobra",
     "exports": "NODE_OPTIONS=--max-old-space-size=8192 ts-node src/jobs/export_cubes.ts && NODE_OPTIONS=--max-old-space-size=8192 ts-node src/jobs/export_decks.ts && NODE_OPTIONS=--max-old-space-size=8192 ts-node src/jobs/export_simple_card_dict.ts && npm run upload-exports",
