--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cubecobra",
-  "version": "1.2.7",
+  "version": "1.2.8",
   "description": "",
   "private": true,
   "main": "app.js",
@@ -31,11 +31,11 @@
     "update-cards": "NODE_OPTIONS=--max_old_space-size=18192 ts-node src/jobs/update_cards.ts",
     "update-combos": "NODE_OPTIONS=--max_old_space-size=18192 ts-node src/jobs/update_combos.ts",
     "update-all": "npm run update-draft-history && npm run update-cube-history && npm run update-metadata-dict && npm run update-combos && npm run update-cards",
-    "update-hashes": "node --max-old-space-size=8192 src/jobs/repair_hashes.js",
+    "update-hashes": "ts-node src/jobs/repair_hashes.js",
     "upload-exports": "aws s3 sync temp/export s3://cubecobra",
-    "exports": "NODE_OPTIONS=--max-old-space-size=8192 ts-node src/jobs/export_cubes.ts && NODE_OPTIONS=--max-old-space-size=8192 ts-node src/jobs/export_decks.ts && NODE_OPTIONS=--max-old-space-size=8192 ts-node src/jobs/export_simple_card_dict.ts && npm run upload-exports",
-    "rotate-queue": "node --max-old-space-size=8192 src/jobs/rotate_featured.js",
-    "sync-podcasts": "node --max-old-space-size=8192 src/jobs/update_podcasts.js",
+    "exports": "NODE_OPTIONS=--max-old-space-size=18192 ts-node src/jobs/export_cubes.ts && NODE_OPTIONS=--max-old-space-size=18192 ts-node src/jobs/export_decks.ts && NODE_OPTIONS=--max-old-space-size=18192 ts-node src/jobs/export_simple_card_dict.ts && npm run upload-exports",
+    "rotate-queue": "node --max-old-space-size=18192 src/jobs/rotate_featured.js",
+    "sync-podcasts": "node --max-old-space-size=18192 src/jobs/update_podcasts.js",
     "start:localstack": "./scripts/local/start_localstack.sh",
     "setup:local": "npm run start:localstack && npm run setup:local:env && npm run setup:local:localstack && npm run setup:local:files && npm run setup:local:db && npm run update-cards",
     "setup:local:localstack": "./scripts/local/init_localstack.sh",
