--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "archiver": "^7.0.1",
     "assert": "^2.0.0",
     "aws-sdk": "^2.1478.0",
+    "aws-sdk-js-codemod": "^3.0.1",
     "bad-words": "^3.0.4",
     "bcryptjs": "^2.4.3",
     "big-json": "^3.2.0",
