--- a/package.json
+++ b/package.json
@@ -82,6 +82,12 @@
   "browserslist": "> 0.5%, Firefox ESR, not dead, not IE > 0, not IE_Mob > 0, not safari < 7, not kaios > 0",
   "dependencies": {
     "@aws-sdk/client-cloudwatch-logs": "^3.433.0",
+    "@aws-sdk/client-dynamodb": "^3.848.0",
+    "@aws-sdk/client-s3": "^3.850.0",
+    "@aws-sdk/client-ses": "^3.848.0",
+    "@aws-sdk/credential-providers": "^3.848.0",
+    "@aws-sdk/lib-dynamodb": "^3.850.0",
+    "@aws-sdk/lib-storage": "^3.850.0",
     "@babel/plugin-transform-runtime": "^7.25.9",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
