Update scripts for AWS SDK 3.

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "ci-build": "npm run nearley && tsc -b && NODE_OPTIONS=--max_old_space_size=16384 node_modules/.bin/webpack --mode production --config webpack.prod.mjs",
     "devstart": "npm run nearley --watch & npm run nodemon & npm run webpack-dev-server & npx tailwindcss -i ./src/client/css/stylesheet.css -o ./public/css/stylesheet.css --watch=always",
     "setup": "npm run nearley && npm run webpack --progress && node --max-old-space-size=8192 force_update.js",
-    "cards": "node --max-old-space-size=8192 force_update.js",
-    "download-model": "node --max-old-space-size=8192 src/jobs/download_model.js",
+    "cards": "ts-node force_update.js",
+    "download-model": "node --max-old-space-size=8192 src/util/downloadModel.js",
     "start": "node server.js",
     "setup-prod": "npm install --immutable && npm run cards && npm run download-model",
     "update-draft-history": "NODE_OPTIONS=--max_old_space-size=18192 ts-node src/jobs/update_draft_history.ts",
