--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "start:localstack": "./scripts/local/start_localstack.sh",
     "setup:local": "npm run start:localstack && npm run setup:local:env && npm run setup:local:localstack && npm run setup:local:files && npm run setup:local:db && npm run update-cards",
     "setup:local:localstack": "./scripts/local/init_localstack.sh",
-    "setup:local:env": "cp .env_EXAMPLE .env",
+    "setup:local:env": "cp --no-clobber .env_EXAMPLE .env",
     "setup:local:files": "node scripts/create_local_files.js",
     "setup:local:db": "NODE_OPTIONS=--max-old-space-size=8192 ts-node scripts/createTables.js",
     "start:dev": "npm run start:localstack && npm run devstart",
