--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "rotate-daily-p1p1": "NODE_OPTIONS=--max-old-space-size=18192 ts-node src/jobs/rotateDailyP1P1.js",
     "sync-podcasts": "node --max-old-space-size=18192 src/jobs/update_podcasts.js",
     "start:localstack": "./scripts/local/start_localstack.sh",
-    "setup:local": "npm run start:localstack && npm run setup:local:env && npm run setup:local:localstack && npm run setup:local:files && npm run setup:local:db && npm run update-cards",
+    "setup:local": "npm run start:localstack && npm run setup:local:env && npm run setup:local:localstack && npm run setup:local:files && npm run setup:local:db && npm run update-combos && npm run update-cards",
     "setup:local:localstack": "./scripts/local/init_localstack.sh",
     "setup:local:env": "cp --no-clobber .env_EXAMPLE .env",
     "setup:local:files": "node scripts/create_local_files.js",
